# frappe_faker

./: .gitignore  README.md  pyproject.toml
frappe_faker/: hooks.py  modules.txt
frappe_faker/frappe_faker/doctype/faker_doctype/: faker_doctype.js  faker_doctype.json  faker_doctype.py  test_faker_doctype.py
frappe_faker/frappe_faker/doctype/faker_doctype_table/: faker_doctype_table.json  faker_doctype_table.py
frappe_faker/frappe_faker/doctype/faker_test_doc/: faker_test_doc.js  faker_test_doc.json  faker_test_doc.py  test_faker_test_doc.py
