[project]
name = "frappe_faker"
authors = [
    { name = "Maxim Sysoev", email = "maks4a@gmail.com"}
]
description = "Frappe Faker - is Frappe application for generate doctype with fake data"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "Faker~=19.2.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
